--- a/WPF/StudentManagement/WpfApplication1/packages.config
+++ b/WPF/StudentManagement/WpfApplication1/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="Caliburn.Micro" version="3.1.0" targetFramework="net452" />
   <package id="Caliburn.Micro.Core" version="3.1.0" targetFramework="net452" />
+  <package id="MaterialDesignColors" version="1.2.7" targetFramework="net452" />
+  <package id="MaterialDesignThemes" version="3.1.3" targetFramework="net452" />
+  <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
