--- a/WPF/StudentManagement/WpfApplication1/StudentManagement.csproj
+++ b/WPF/StudentManagement/WpfApplication1/StudentManagement.csproj
@@ -86,7 +86,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Models\ClassModel.cs" />
+    <Compile Include="Models\Dataset.cs" />
     <Compile Include="Models\StudentModel.cs" />
+    <Compile Include="Models\StudentSearchCriteria.cs" />
+    <Compile Include="Service\IStudentService.cs" />
+    <Compile Include="Service\StudentService.cs" />
     <Compile Include="ViewModels\CreateStudentViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ModifyStudentViewModel.cs" />
@@ -145,9 +150,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Runtime.WindowsRuntime.4.6.0\build\net451\System.Runtime.WindowsRuntime.targets" Condition="Exists('..\packages\System.Runtime.WindowsRuntime.4.6.0\build\net451\System.Runtime.WindowsRuntime.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
