--- a/07-ex/07-linq/07-linq.csproj
+++ b/07-ex/07-linq/07-linq.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Dataset.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Result.cs" />
+    <Compile Include="result.cs" />
     <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
